--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "framer-motion": "^9.0.2",
     "gsap": "^3.11.0",
     "next": "12.2.5",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
@@ -24,8 +29,8 @@
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "semantic-release": "^19.0.5"
+    "semantic-release": "^19.0.5",
+    "tailwindcss": "^3.1.8"
   },
   "repository": {
     "type": "git",
